// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > Tabs Root > renders with default classes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2"
    data-orientation="horizontal"
    data-slot="tabs"
    dir="ltr"
  />
</DocumentFragment>
`;

exports[`Tabs > TabsContent > renders with default classes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2"
    data-orientation="horizontal"
    data-slot="tabs"
    dir="ltr"
  >
    <div
      aria-labelledby="radix-«ri»-trigger-test"
      class="flex-1 outline-none"
      data-orientation="horizontal"
      data-slot="tabs-content"
      data-state="active"
      id="radix-«ri»-content-test"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      Test Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > TabsList > renders with default classes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2"
    data-orientation="horizontal"
    data-slot="tabs"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="bg-muted text-muted-foreground inline-flex h-9 w-fit items-center justify-center rounded-lg p-[3px]"
      data-orientation="horizontal"
      data-slot="tabs-list"
      role="tablist"
      style="outline: none;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs > TabsTrigger > renders with default classes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2"
    data-orientation="horizontal"
    data-slot="tabs"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="bg-muted text-muted-foreground inline-flex h-9 w-fit items-center justify-center rounded-lg p-[3px]"
      data-orientation="horizontal"
      data-slot="tabs-list"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <button
        aria-controls="radix-«r8»-content-test"
        aria-selected="true"
        class="data-[state=active]:bg-background dark:data-[state=active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-slot="tabs-trigger"
        data-state="active"
        id="radix-«r8»-trigger-test"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Test Tab
      </button>
    </div>
  </div>
</DocumentFragment>
`;
